# ferripaste

./: .gitignore  README.md  ferripaste.py  go.mod  go.sum  pyproject.toml  rpaste  rpaste.py
cmd/ferri/: main.go
